# cashew

./: .gitignore  CI.sh  CI_test.sh  Docker_CI.sh  Docker_test.sh  Dockerfile  Pipfile  README.md  clean_history.sh  install_CI.sh  process_archives.sh  pyproject.toml  recompute_stats.sh  reprocess_all.sh  setup.py  split_hdf5.py  test.py  upload_zenodo.sh
.github/workflows/: main.yml
cashew/: __main__.py  archive_extraction.py  linear_regression.py  logger.py  non_regression_tests.py  notebook_generation.py
test_data/: test_data_monitoring.csv  test_data_performance.csv
